--- a/src/Web/Backoffice/Pages/Orders/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Orders/Details.cshtml
@@ -162,19 +162,19 @@
                 {
                     <form method="post">
                         <input type="hidden" asp-for="OrderModel.Id" />
-                        <div class="form-group">
+                        @*<div class="form-group">
                             <select asp-for="OrderModel.PaymentTypeSelected" asp-items="Html.GetEnumSelectList<ApplicationCore.DTOs.PaymentType>()" class="form-control"></select>
                             <span asp-validation-for="OrderModel.PaymentTypeSelected" class="text-danger"></span>
-                        </div>
-                        <input type="submit" value="Criar Fatura/Recibo" class="btn btn-success" asp-page-handler="RegisterInvoice" />
+                        </div>*@
+                        <input type="submit" value="Criar Fatura" class="btn btn-success" asp-page-handler="RegisterInvoice" />
                     </form>
                 }                
                 else
                 {
                     <span class="bold">Fatura nº @Model.OrderModel.SalesInvoiceNumber</span><br>
                     <a asp-page-handler="InvoicePDF" asp-route-id="@Model.OrderModel.Id" asp-route-invoiceId="@Model.OrderModel.SalesInvoiceId">Imprimir Fatura</a> 
-                    <span>|</span>
-                    <a asp-page-handler="ReceiptPDF" asp-route-id="@Model.OrderModel.Id" asp-route-invoiceId="@Model.OrderModel.SalesInvoiceId" asp-route-paymentId="@Model.OrderModel.SalesPaymentId">Imprimir Recibo</a>
+                    @*<span>|</span>
+                    <a asp-page-handler="ReceiptPDF" asp-route-id="@Model.OrderModel.Id" asp-route-invoiceId="@Model.OrderModel.SalesInvoiceId" asp-route-paymentId="@Model.OrderModel.SalesPaymentId">Imprimir Recibo</a>*@
                     <form method="post">
                         <input type="hidden" asp-for="OrderModel.Id" />
                         <button type="submit" asp-page-handler="SendEmailToClient" class="btn btn-info">Enviar mail a cliente</button>
