--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/Templates/OrderItemTemplate.xaml
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/Views/Templates/OrderItemTemplate.xaml
@@ -99,14 +99,30 @@
                     <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
                 <!-- NAME -->
                 <Label
                     Grid.Row="0"
                     Text="{Binding ProductName, Converter={StaticResource ToUpperConverter}}"
                     Style="{StaticResource OrderItemTitleStyle}"/>
+                <ListView
+                    Grid.Row="1"
+                    ItemsSource="{Binding Details}"                              
+                    HeightRequest="{Binding Details.Count, Converter={StaticResource AttributesToHeightConverter}}"
+                    HasUnevenRows="True"
+                    SeparatorVisibility="None"                    
+                    CachingStrategy="RecycleElement">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Label Text="{Binding AttributeName}"/>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
                 <Grid
-                    Grid.Row="1">
+                    Grid.Row="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                         <ColumnDefinition />
@@ -123,7 +139,7 @@
                 </Grid>
                 <!-- TOTAL -->
                 <Label
-                    Grid.Row="2"
+                    Grid.Row="3"
                     Text="{Binding Total, StringFormat='€{0:N}'}"
                     Style="{StaticResource OrderTotalStyle}"/>
             </Grid>
