--- a/src/Web/Backoffice/Pages/Products/Attributes/Create.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Attributes/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Novo</h2>
+<h2>Associar</h2>
 
 <h4>Atributo do Produto @Model.CatalogAttributeModel.CatalogItem.Name</h4>
 <hr />
@@ -15,14 +15,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>          
             <input type="hidden" asp-for="CatalogAttributeModel.CatalogItem.Name" />
             <div class="form-group">
-                <label asp-for="CatalogAttributeModel.Type" class="control-label"></label>
-                <select asp-for="CatalogAttributeModel.Type" asp-items="Html.GetEnumSelectList<ApplicationCore.Entities.CatalogAttributeType>()" class="form-control"></select>
-                <span asp-validation-for="CatalogAttributeModel.Type" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CatalogAttributeModel.Name" class="control-label"></label>
-                <input asp-for="CatalogAttributeModel.Name" class="form-control" />
-                <span asp-validation-for="CatalogAttributeModel.Name" class="text-danger"></span>
+                <label asp-for="CatalogAttributeModel.AttributeId" class="control-label"></label>
+                <select asp-for="CatalogAttributeModel.AttributeId" asp-items="ViewBag.Attributes" class="form-control"></select>
+                <span asp-validation-for="CatalogAttributeModel.AttributeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CatalogAttributeModel.Price" class="control-label"></label>
