--- a/src/Web/Backoffice/Pages/Products/Attributes/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Attributes/Delete.cshtml
@@ -13,16 +13,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogAttributeModel.Type)
+            @Html.DisplayNameFor(model => model.CatalogAttributeModel.AttributeName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CatalogAttributeModel.Type)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CatalogAttributeModel.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CatalogAttributeModel.Name)
+            @Html.DisplayFor(model => model.CatalogAttributeModel.AttributeName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CatalogAttributeModel.Price)
