--- a/src/Web/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Details.cshtml
@@ -127,10 +127,7 @@
                 <thead>
                     <tr>
                         <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Type)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Name)
+                            @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].AttributeName)
                         </th>
                         <th>
                             @Html.DisplayNameFor(model => model.ProductModel.CatalogAttributes[0].Price)
@@ -147,10 +144,7 @@
                         {
                             <tr>
                                 <td>
-                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Type)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Name)
+                                    @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].AttributeName)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(model => model.ProductModel.CatalogAttributes[i].Price)
