backoffice Attributes References changes

--- a/src/Web/Backoffice/Pages/ProductType/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Delete.cshtml
@@ -51,6 +51,12 @@
         <dd>
             @Html.DisplayFor(model => model.ProductTypeModel.DeliveryTimeUnit)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.Price)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.Price)
+        </dd>
         <dd>
             <img src="@Model.ProductTypeModel.PictureUri" class="img-responsive" />
         </dd>
