--- a/src/Web/Backoffice/Pages/Products/Attributes/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Attributes/Delete.cshtml
@@ -13,22 +13,16 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogAttributeModel.AttributeName)
+            @Html.DisplayNameFor(model => model.CatalogAttributeModel.Type)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.CatalogAttributeModel.AttributeName)
+            @Html.DisplayFor(model => model.CatalogAttributeModel.Type)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.CatalogAttributeModel.Price)
+            @Html.DisplayNameFor(model => model.CatalogAttributeModel.Name)
         </dt>
         <dd>
-            + @Html.DisplayFor(model => model.CatalogAttributeModel.Price)
-        </dd>        
-        <dt>
-            @Html.DisplayNameFor(model => model.CatalogAttributeModel.ReferenceCatalogItem)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CatalogAttributeModel.ReferenceCatalogItem.Name)
+            @Html.DisplayFor(model => model.CatalogAttributeModel.Name)
         </dd>
     </dl>
     
