small fixes and email changes

--- a/src/Web/DamaWeb/Pages/Basket/Result.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Result.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-sm-6">
-        <p>A sua encomenda foi criada com <strong>Sucesso!</strong></p>
+        <p>A sua encomenda #@Model.OrderNumber foi criada com <strong>Sucesso!</strong></p>
         <p>Para concluir consulte o seu email.</p>
         <br />
         <p>Obrigado por escolher a <strong>Dama no Jornal&reg;!</strong></p>
